--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "lite-server": "2.4.0"
   },
   "dependencies": {
+    "@truffle/hdwallet-provider": "^1.4.2",
     "openzeppelin-solidity": "^2.2.0",
     "solc": "^0.5.2",
-    "solc-js": "^0.5.2"
+    "solc-js": "^0.5.2",
+    "web3": "^1.5.0",
+    "truffle-assertions": "^0.9.2"
   }
 }
